<?xml version="1.0"?>
<package format="2">
  <name>helper_codes</name>
  <version>0.0.1</version>
  <description>A package to run helper scripts to keep simulations stable</description>
  <maintainer email="raghuramengineer@gmail.com">RAM_THEERTHALA</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_srvs</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <export>
    <!-- Additional export information can be placed here -->
  </export>
</package>

